[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
]
